[package]
name = "contracts-node-runtime"
version = "0.7.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Unlicense"
homepage = "https://github.com/paritytech/substrate-contracts-node"
repository = "https://github.com/paritytech/substrate-contracts-node"
build = "build.rs"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

pallet-balances = { path = "../../bit-substrate/frame/balances", package = "pallet-balances", default-features = false }
frame-support = { path = "../../bit-substrate/frame/support", package = "frame-support", default-features = false }
pallet-grandpa = { path = "../../bit-substrate/frame/grandpa", package = "pallet-grandpa", default-features = false }
pallet-randomness-collective-flip = { path = "../../bit-substrate/frame/randomness-collective-flip", package = "pallet-randomness-collective-flip", default-features = false }
pallet-sudo = { path = "../../bit-substrate/frame/sudo", package = "pallet-sudo", default-features = false }
frame-system = { path = "../../bit-substrate/frame/system", package = "frame-system", default-features = false }
pallet-timestamp = { path = "../../bit-substrate/frame/timestamp", package = "pallet-timestamp", default-features = false }
pallet-transaction-payment = { path = "../../bit-substrate/frame/transaction-payment", package = "pallet-transaction-payment", default-features = false }
frame-executive = { path = "../../bit-substrate/frame/executive", package = "frame-executive", default-features = false }
sp-api = { path = "../../bit-substrate/primitives/api", package = "sp-api", default-features = false }
sp-block-builder = { path = "../../bit-substrate/primitives/block-builder", package = "sp-block-builder", default-features = false }
sp-core = { path = "../../bit-substrate/primitives/core", package = "sp-core", default-features = false }
sp-inherents = { path = "../../bit-substrate/primitives/inherents", package = "sp-inherents", default-features = false }
sp-offchain = { path = "../../bit-substrate/primitives/offchain", package = "sp-offchain", default-features = false }
sp-runtime = { path = "../../bit-substrate/primitives/runtime", package = "sp-runtime", default-features = false }
sp-session = { path = "../../bit-substrate/primitives/session", package = "sp-session", default-features = false }
sp-std = { path = "../../bit-substrate/primitives/std", package = "sp-std", default-features = false }
sp-transaction-pool = { path = "../../bit-substrate/primitives/transaction-pool", package = "sp-transaction-pool", default-features = false }
sp-version = { path = "../../bit-substrate/primitives/version", package = "sp-version", default-features = false }
sp-finality-grandpa = { path = "../../bit-substrate/primitives/finality-grandpa", package = "sp-finality-grandpa", default-features = false }

# Used for the node's RPCs
frame-system-rpc-runtime-api = { path = "../../bit-substrate/frame/system/rpc/runtime-api", package = "frame-system-rpc-runtime-api", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { path = "../../bit-substrate/frame/transaction-payment/rpc/runtime-api", package = "pallet-transaction-payment-rpc-runtime-api", default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { path = "../../bit-substrate/frame/benchmarking", default-features = false, package = "frame-benchmarking", optional = true }
frame-system-benchmarking = { path = "../../bit-substrate/frame/system/benchmarking", default-features = false, package = "frame-system-benchmarking", optional = true }
hex-literal = { version = "0.3.4", optional = true }

# Contracts specific packages
pallet-contracts = { path = "../../bit-substrate/frame/contracts", package = "pallet-contracts", default-features = false }
pallet-contracts-primitives = { path = "../../bit-substrate/frame/contracts/common", package = "pallet-contracts-primitives", default-features = false }
pallet-contracts-rpc-runtime-api = { path = "../../bit-substrate/frame/contracts/rpc/runtime-api", package = "pallet-contracts-rpc-runtime-api", default-features = false }

[build-dependencies]
substrate-wasm-builder =  { path = "../../bit-substrate/utils/wasm-builder", package = "substrate-wasm-builder" }

[features]
default = [
	"std",
	# temporarily enable unstable contracts features by default, remove this before using on a production chain.
	"contracts-unstable-interface",
]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	# "pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	# "sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
  "sp-finality-grandpa/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Make contract callable functions marked as __unstable__ available. Do not enable
# on live chains as those are subject to change.
contracts-unstable-interface = [
	"pallet-contracts/unstable-interface"
]
